--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+#main{
+	height:150px;
+	width:150px;
+	bakground-color:black;
+}
+.hello-accio{
+	color:white;
+	margin-left:32px;
+	padding:10px;
+}
