--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
-#main{
+.accio{
 	height:150px;
 	width:150px;
-	bakground-color:black;
+	background-color:black;
 }
 .hello-accio{
-	text-color:white;
+	color:white;
 	margin-left:32px;
 	padding:10px;
 }
